--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,105 @@
+/* 1. Use a more-intuitive box-sizing model */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* 2. Remove default margin */
+* {
+  margin: 0;
+}
+
+/* 3. Enable keyword animations */
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    interpolate-size: allow-keywords;
+  }
+}
+
+body {
+  /* 4. Add accessible line-height */
+  line-height: 1.5;
+  /* 5. Improve text rendering */
+  -webkit-font-smoothing: antialiased;
+}
+
+/* 6. Improve media defaults */
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+/* 7. Inherit fonts for form controls */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* 8. Avoid text overflows */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/* 9. Improve line wrapping */
+p {
+  text-wrap: pretty;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
+/*
+  10. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
+}
+
 body {
   background-color: purple;
+  display: grid;
+  justify-content: center;
+  grid-template-rows: 200px 1fr;
+  height: 100%;
+  width: 100%;
+}
+
+#heading {
+  font-size: 3rem;
+}
+
+header {
+  background-color: black;
+  display: grid;
+  justify-content: center;
+  grid-template-rows: 1fr 1fr;
+  text-align: center;
+  align-items: center;
+  color: white;
+}
+
+button {
+  background-color: black;
+  color: white;
+  border: none;
+  font-size: 2rem;
 }
