--- a/src/styles.css
+++ b/src/styles.css
@@ -74,12 +74,19 @@ h6 {
   isolation: isolate;
 }
 
+:root {
+  --background-light: rgba(0, 0, 0, 0.6);
+  --text-color: rgb(233, 233, 233);
+}
+
 body {
-  background-color: purple;
+  background: url("./background.jpg");
+  background-size: cover;
+  background-attachment: fixed;
   display: grid;
-  justify-content: center;
+  justify-items: center;
   grid-template-rows: 200px 1fr;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -92,14 +99,35 @@ header {
   display: grid;
   justify-content: center;
   grid-template-rows: 1fr 1fr;
+  width: 100vw;
   text-align: center;
   align-items: center;
-  color: white;
+  color: var(--text-color);
 }
 
 button {
   background-color: black;
-  color: white;
+  color: var(--text-color);
   border: none;
   font-size: 2rem;
+  cursor: pointer;
+}
+
+#content {
+  width: 800px;
+  height: 600px;
+  background-color: var(--background-light);
+  align-self: center;
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  font-size: 1.5rem;
+}
+
+img {
+  width: 300px;
+  border-radius: 200px;
 }
