--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ h6 {
 :root {
   --background-light: rgba(0, 0, 0, 0.6);
   --text-color: rgb(233, 233, 233);
-  --background-dark: rgba(0, 0, 0, 0.9);
+  --background-dark: rgba(0, 0, 0, 0.6);
 }
 
 body {
@@ -100,7 +100,7 @@ header {
   display: grid;
   justify-content: center;
   grid-template-rows: 1fr 1fr;
-  width: 100vw;
+  width: 100%;
   text-align: center;
   align-items: center;
   color: var(--text-color);
@@ -115,7 +115,8 @@ button {
 }
 
 #content {
-  width: 600px;
+  height: 100%;
+  width: 800px;
   background-color: var(--background-light);
   align-self: center;
   color: var(--text-color);
@@ -133,11 +134,12 @@ img {
 }
 
 .menu-item {
-  width: 200px;
+  width: 250px;
   height: 300px;
   justify-self: center;
-  display: grid;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   background-color: var(--background-dark);
 }
@@ -155,4 +157,14 @@ img {
   grid-template-columns: repeat(2, 300px);
   gap: 40px;
   padding: 60px;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+}
+
+.contact {
+  display: flex;
+  gap: 20px;
 }
